--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -7,5 +7,17 @@
             android:layout_width="wrap_content"
             android:background="@color/colorAccent"
             android:layout_height="wrap_content" />
+        <com.example.chenyong.android_demo.view.CustomTextView
+            android:layout_width="200dp"
+            android:text="color text view"
+            android:textColor="@android:color/white"
+            android:layout_height="100dp" />
+        <com.example.chenyong.android_demo.view.GradientTextView
+            android:layout_width="200dp"
+            android:text="gradient text"
+            android:layout_height="100dp" />
+        <com.example.chenyong.android_demo.view.CircleProgressView
+            android:layout_width="200dp"
+            android:layout_height="200dp" />
     </LinearLayout>
 </layout>
