--- a/app/src/main/res/layout/activity_custom_view.xml
+++ b/app/src/main/res/layout/activity_custom_view.xml
@@ -1,23 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-    <LinearLayout
-        android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <com.example.chenyong.android_demo.view.CustomView
-            android:layout_width="wrap_content"
-            android:background="@color/colorAccent"
-            android:layout_height="wrap_content" />
-        <com.example.chenyong.android_demo.view.CustomTextView
-            android:layout_width="200dp"
-            android:text="color text view"
-            android:textColor="@android:color/white"
-            android:layout_height="100dp" />
-        <com.example.chenyong.android_demo.view.GradientTextView
-            android:layout_width="200dp"
-            android:text="gradient text"
-            android:layout_height="100dp" />
-        <com.example.chenyong.android_demo.view.CircleProgressView
-            android:layout_width="200dp"
-            android:layout_height="200dp" />
-    </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <com.example.chenyong.android_demo.view.CustomView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:background="@color/colorAccent"/>
+
+            <com.example.chenyong.android_demo.view.CustomTextView
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:visibility="gone"
+                android:text="color text view"
+                android:textColor="@android:color/white"/>
+
+            <com.example.chenyong.android_demo.view.GradientTextView
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:visibility="gone"
+                android:text="gradient text"/>
+
+            <com.example.chenyong.android_demo.view.CircleProgressView
+                android:layout_width="200dp"
+                android:visibility="gone"
+                android:layout_height="200dp"/>
+
+            <com.example.chenyong.android_demo.view.SecondOrderBezier
+                android:layout_width="match_parent"
+                android:visibility="gone"
+                android:layout_height="match_parent"/>
+
+            <com.example.chenyong.android_demo.view.ThirdOrderBezier
+                android:layout_width="match_parent"
+                android:visibility="gone"
+                android:layout_height="match_parent"/>
+            <com.example.chenyong.android_demo.view.PathBezier
+                android:layout_width="match_parent"
+                android:layout_height="600dp"/>
+        </LinearLayout>
+
 </layout>
