--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,83 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            xmlns:app="http://schemas.android.com/apk/res-auto">
-    <LinearLayout
-        android:id="@+id/content_main2"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="100dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        <Button
-            android:id="@+id/custom_view"
-            android:onClick="onClick"
-            android:text="自定义view"
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/scroller"
-            android:onClick="onClick"
-            android:text="scroller"
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/device"
-            android:onClick="onClick"
-            android:text="device"
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/dao"
-            android:onClick="onClick"
-            android:text="green dao"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <Button
-            android:layout_width="match_parent"
-            android:id="@+id/hello_kotlin"
-            android:onClick="onClick"
-            android:text="hello kotlin"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:layout_width="match_parent"
-            android:id="@+id/webview"
-            android:onClick="onClick"
-            android:text="webview"
-            android:visibility="gone"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:layout_width="match_parent"
-            android:text="http"
-            android:onClick="onClick"
-            android:id="@+id/http"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:layout_width="match_parent"
-            android:text="algorithm"
-            android:onClick="onClick"
-            android:id="@+id/algorithm"
-            android:layout_height="wrap_content"/>
-        <Button
-            android:layout_width="match_parent"
-            android:text="dagger"
-            android:onClick="onClick"
-            android:id="@+id/dagger"
-            android:layout_height="wrap_content"/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:id="@+id/content_main2"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:paddingTop="?attr/actionBarSize"
+              android:paddingLeft="@dimen/activity_horizontal_margin"
+              android:paddingRight="@dimen/activity_horizontal_margin"
+              android:paddingBottom="@dimen/activity_vertical_margin">
 
-        <Button
-            android:layout_width="match_parent"
-            android:text="path"
-            android:id="@+id/path"
-            android:onClick="onClick"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-</ScrollView>
+    <Button
+        android:id="@+id/custom_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="自定义view"
+        android:visibility="visible"/>
+
+    <Button
+        android:id="@+id/scroller"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="scroller"
+        android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/device"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="device"
+        android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/dao"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="green dao"/>
+
+    <Button
+        android:id="@+id/hello_kotlin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="hello kotlin"/>
+
+    <Button
+        android:id="@+id/webview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="webview"
+        android:visibility="gone"/>
+
+    <Button
+        android:id="@+id/http"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="http"/>
+
+    <Button
+        android:id="@+id/algorithm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="algorithm"/>
+
+    <Button
+        android:id="@+id/dagger"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="dagger"/>
+
+    <Button
+        android:id="@+id/path"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="path"/>
+
+    <Button
+        android:layout_width="match_parent"
+        android:id="@+id/intent_service"
+        android:onClick="onClick"
+        android:text="intent service"
+        android:layout_height="wrap_content"/>
+</LinearLayout>
 
