--- a/app/src/main/res/layout/activity_drawable.xml
+++ b/app/src/main/res/layout/activity_drawable.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <ImageView
         android:layout_width="200dp"
-        android:id="@+id/meinv"
-        android:clickable="true"
-        android:onClick="onClick"
         android:src="@drawable/girl"
-        android:layout_height="70dp" />
+        android:layout_height="200dp" />
 </LinearLayout>
